Agregando clase setProduct

--- a/pages/vinos.html
+++ b/pages/vinos.html
@@ -48,7 +48,7 @@
                               <img src="../img/cart.png" alt="">
                               <div id="carrito">
                                   <p  class="vacio">carrito vacio</p>
-                                  <table  class="u-full-width">
+                                  <!-- <table  class="u-full-width">
                                       <thead>
                                           <tr>
                                               <th>Imagen</th>
@@ -60,7 +60,7 @@
                                           
                                       </tbody>
                                   </table>
-                                  <a href="#" id="vaciar-carrito" class="button u-full-width">vaciar carrito</a>
+                                  <a href="#" id="vaciar-carrito" class="button u-full-width">vaciar carrito</a> -->
                               </div>
                           </li>
                       </ul>
